# claude-plugins3-public

./: .gitignore  CLAUDE.md  README.md
plugins/logging/: .gitignore  README.md  pyproject.toml
plugins/logging/.claude-plugin/: plugin.json
plugins/logging/agents/: archivist.md
plugins/logging/api/: __init__.py  server.py
plugins/logging/commands/: browse.md  search.md  stats.md
plugins/logging/hooks/: log_event.py
plugins/logging/lib/: __init__.py  embeddings.py  search.py  storage.py
plugins/logging/scripts/: backfill_embeddings.py  start-web.sh
plugins/logging/skills/log-search/: SKILL.md
plugins/logging/skills/obsidian/: SKILL.md
plugins/logging/skills/stats/: SKILL.md
plugins/logging/skills/web-ui/: SKILL.md
plugins/logging/tools/: repair_sessions.py
plugins/logging/web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
plugins/logging/web/app/: globals.css  layout.tsx  page.tsx
plugins/logging/web/components/: embedding-graph.tsx  highlighted-text.tsx  scoring-settings-dropdown.tsx  session-list.tsx  stats-panel.tsx
plugins/logging/web/lib/: api.ts  scoring-settings.tsx  search-context.tsx  utils.ts
plugins/observatory/skills/observatory/: .gitignore  SKILL.md  pyproject.toml
plugins/observatory/skills/observatory/agents/: admin.py  apps.py  models.py
plugins/observatory/skills/observatory/billing/: admin.py  apps.py  models.py
plugins/observatory/skills/observatory/commands/: admin.py  apps.py  models.py
plugins/observatory/skills/observatory/hooks/: admin.py  apps.py  models.py
plugins/observatory/skills/observatory/knowledge/: __init__.py  admin.py  apps.py  models.py
plugins/observatory/skills/observatory/mcps/: admin.py  apps.py  models.py
plugins/observatory/skills/observatory/observatory/: __init__.py  admin_utils.py  api_utils.py  settings.py  urls.py  wsgi.py
plugins/observatory/skills/observatory/output_styles/: admin.py  apps.py  models.py
plugins/observatory/skills/observatory/plugins/: admin.py  apps.py  models.py
plugins/observatory/skills/observatory/sessions/: admin.py  apps.py  models.py
plugins/observatory/skills/observatory/settings/: admin.py  (+2 more)
(+112 files in other folders)
